# constrained_ml_planner

./: README.md
abb_projector/: CMakeLists.txt  package.xml
abb_projector/data/: rod.txt  samples.txt  samples_abb.txt  samples_comau3.txt
abb_projector/include/: kdl_class.h  projector.h
abb_projector/src/: kdl_class_abb.cpp  kdl_class_comau3.cpp  m  main.cpp  makefile  projector.cpp  projector_node.cpp  test.cpp  test.py  test_ae.txt  test_kdl.txt
abb_projector/srv/: project_srv.srv  sample_srv.srv
abb_simulator/: CMakeLists.txt  package.xml
abb_simulator/include/: simulator.hpp
abb_simulator/src/: simulator.cpp  simulator_node.cpp
autoencoder_projector/: CMakeLists.txt  package.xml
autoencoder_projector/launch/: run.launch
autoencoder_projector/model/: autoencoder_model.ckpt.data-00000-of-00001  autoencoder_model.ckpt.index  checkpoint
autoencoder_projector/src/: Autoencoder.py  auto_proj.py  autoencoder.py  nn_train_abb_seq.py
autoencoder_projector/srv/: autoencoder.srv
learn_constraint/: nn_train.py  nn_train_2d.py  nn_train_2d_seq.py  nn_train_4bar.py  nn_train_4bar_seq.py  nn_train_abb_seq.py  results.txt  results_dim.txt
learn_constraint/model_4bar/: kdl_class.cpp  kdl_class.h  m  main.cpp  plot.py
simulator/: viz
simulator_abb/: main.cpp
simulator_comau3/: b1.tris  b2.tris  base.tris  base_r.tris  floor.tris  link1.tris  link1_r.tris  link2.tris  link2_r.tris  link3.tris  link3_r.tris  link4.tris  link4_r.tris  link5.tris  link5_r.tris  link6.tris  main.cpp  obs.tris  obs1.tris  obs2.tris  room.tris  viz  wheel.tris
(+16 files in other folders)
